--- a/index.css
+++ b/index.css
@@ -6,3 +6,14 @@ ul{
     background-color: white;
     font-size: 30px;
 }
+li{
+    float: left;
+}
+li a{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 16px 18px;
+    text-decoration: none;
+    color: black;
+}
