--- a/index.css
+++ b/index.css
@@ -17,3 +17,15 @@ li a{
     text-decoration: none;
     color: black;
 }
+.list{
+    float: right;
+    color: black;
+}
+.container{
+    width: 100%;
+    height: 750px;
+    background-image: url(images/bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    text-align: center;
+}
