--- a/index.css
+++ b/index.css
@@ -29,3 +29,14 @@ li a{
     background-repeat: no-repeat;
     text-align: center;
 }
+#but,#btn{
+    margin-top: 10px;
+    height: 50px;
+    width: 200px;
+    font-weight: bolder;
+    border: none;
+    color: white;
+    background-color: blue;
+    font-size: larger;
+    margin-right: 60px;
+    }
