--- a/index.css
+++ b/index.css
@@ -40,3 +40,25 @@ li a{
     font-size: larger;
     margin-right: 60px;
     }
+    #touch{
+    
+        margin-top: 10px;
+        height: 50px;
+        width: 200px;
+        font-weight: bolder;
+        border: solid 2px white;
+        background: none;
+        color: white;
+        font-size: larger;
+    }
+    .container1{
+        width: 100%;
+        height: 600px;
+        margin-top: -100px;
+        display: flex;
+        padding-top: 10%;
+    }
+    .text{
+        flex: 1;
+      margin-left: 100px; 
+    }
