--- a/index.css
+++ b/index.css
@@ -76,3 +76,23 @@ li a{
         font-size: larger;
         margin-right: 60px;  
     }
+    .container2{
+        width: 100%;
+        height: 630px;
+        background-image: url(images/Rectangle\ 11.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        text-align: center;
+        padding-top: 100px;
+    }
+    #in{
+        margin-top: 10px;
+        height: 50px;
+        width: 200px;
+        font-weight: bolder;
+        border: none;
+        color: white;
+        background-color: blue;
+        font-size: larger;
+        margin-right: 60px;   
+    }
