--- a/index.css
+++ b/index.css
@@ -96,3 +96,25 @@ li a{
         font-size: larger;
         margin-right: 60px;   
     }
+    .container3{
+        width: 100%;
+        height: 800px;
+    
+    }
+    #img{
+    width: 400px;
+    }
+    .our{
+        padding-top: 70px;
+     text-align: center;   
+    }
+    .air{
+        display: flex;
+        padding-top: 100px;
+        justify-content: space-around;
+    }
+    .box{
+    box-shadow:  2px  2px 2px 3px rgb(221, 214, 214);
+    width: 400px;
+    border-radius: 2px;
+        }
