--- a/index.css
+++ b/index.css
@@ -117,4 +117,22 @@ li a{
     box-shadow:  2px  2px 2px 3px rgb(221, 214, 214);
     width: 400px;
     border-radius: 2px;
-        }
+    }
+    .container4{
+        width: 100%;
+        height: 750px;
+        background-color: blue;
+        display:flex;
+        justify-content: space-around;
+    }
+    .contact{
+        color: white;
+        font-size: large;
+    }
+ .getin{
+     height: 500px;
+     width: 500px;
+     background-color: white;
+     margin-top: 70px;
+     padding-left: 70px;
+ } 
