--- a/index.css
+++ b/index.css
@@ -136,3 +136,25 @@ li a{
      margin-top: 70px;
      padding-left: 70px;
  } 
+ #Username,#Email{
+    height: 30px;
+    width: 400px;
+}  
+#Message{
+    width: 400px;
+    height: 80px;
+}
+#submit{
+    color: white;
+    background-color: blue;
+    text-align: center;
+    height: 30px;
+    width: 200px;
+}
+footer{
+ color: white; 
+ background-color: navy; 
+ padding: 80px; 
+ text-align: center;
+ font-size: 25px;
+}
